--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1407,10 +1407,75 @@ footer {
   white-space: nowrap;
 
   @media (max-width: 768px) {
-    top: 100%;
-    left: 0;
-    margin-top: 8px;
-    width: 100%;
+    display: none;
+  }
+}
+
+.magazine-dropdown-menu-mobile {
+  list-style: none;
+  padding: 0;
+  margin: 0.5em 0 0 0;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  animation: expandMenu 0.4s ease-out forwards;
+
+  @media (min-width: 769px) {
+    display: none;
+  }
+
+  li {
+    margin: 0.5em 0;
+    padding-left: 1em;
+    font-weight: normal;
+    text-transform: uppercase;
+    position: relative;
+    opacity: 0;
+    transform: translateY(-10px);
+    animation: fadeInSlide 0.4s ease-out forwards;
+
+    &:nth-child(1) {
+      animation-delay: 0.1s;
+    }
+
+    &:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    a {
+      color: $color-black;
+      text-decoration: none;
+      transition: color 0.3s ease;
+      display: block;
+
+      &:hover {
+        color: $color-salmon;
+      }
+    }
+  }
+}
+
+@keyframes expandMenu {
+  from {
+    max-height: 0;
+    opacity: 0;
+    margin-top: 0;
+  }
+  to {
+    max-height: 200px;
+    opacity: 1;
+    margin-top: 0.5em;
+  }
+}
+
+@keyframes fadeInSlide {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
